<resources>
    <string name="app_name">Notes</string>
    <string name="add_a_note">Add a note!</string>
    <string name="title">Title</string>
    <string name="description">Description..</string>
    <string name="add">Add</string>
    <string name="description_val">Description</string>
    <string name="del">DEL</string>
    <string name="go_to_main">Back</string>
    <string name="your_notes">Your notes</string>
    <string name="search_title">Search title</string>
    <string name="search">search</string>
    <string name="google_sign_in">Google Sign in</string>
    <string name="logout">logout</string>
</resources>