<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_note"
        app:layout_constraintBottom_toBottomOf="@id/input_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/input_title"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/input_title"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_add_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@id/all_notes"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:text="@string/add"/>

    <EditText
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/search_title"
        android:minHeight="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/all_notes"
        app:layout_constraintRight_toLeftOf="@+id/search_go_btn"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_note"
        android:inputType="textMultiLine"
        android:minWidth="200dp"/>

    <Button
        android:id="@+id/search_go_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@id/all_notes"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/search"
        app:layout_constraintTop_toBottomOf="@id/btn_add_note"
        android:text="@string/search"/>

    <TextView
        android:id="@+id/all_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_notes"
        app:layout_constraintTop_toBottomOf="@id/search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/list" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/all_notes" />

</androidx.constraintlayout.widget.ConstraintLayout>